enumcapsulate/tests/derive-tests/try_into/fail/enum/struct_variants.err.txt
error: proc-macro derive panicked
 --> /tests/derive-tests/try_into/fail/enum/struct_variants.rs:5:10
  |
5 | #[derive(From)]
  |          ^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with tuple variants can use this derive")
error[E0412]: cannot find type `VariantA` in this scope
 --> /tests/derive-tests/try_into/fail/enum/struct_variants.rs:7:14
  |
3 | pub struct Variant;
  | ------------------- similarly named struct `Variant` defined here
...
7 |     VariantA(VariantA),
  |              ^^^^^^^^
  |
help: there is an enum variant `crate::Enum::VariantA`; try using the variant's enum
  |
7 |     VariantA(crate::Enum),
  |              ~~~~~~~~~~~
help: a struct with a similar name exists
  |
7 |     VariantA(Variant),
  |              ~~~~~~~
For more information about this error, try `rustc --explain E0412`.
error: could not compile `<CRATE>` (bin "<BIN>") due to 2 previous errors
